...
              ),
              _buildMenuItem(
                context,
                Icons.bar_chart,
                "Laporan\nKeuangan",
                "/laporan-keuangan",
                key: const Key('menu_laporan_keuangan'),
              ),
              _buildMenuItem(
                context,
                Icons.print,
                "Cetak\nLaporan",
                "/cetak-laporan",
                key: const Key('menu_cetak_laporan'),
              ),
            ],
          ),
        ],
      ),
    );
...
